flapivor/tests/m1/hopix/parser/bad/38-type-definition-record-1.hopix
type People = { age : Int; name : String; firstname : String; }